# simple-viewer

./: .gitignore  CMakeLists.txt  README.md  example.cpp
include/: opengl_viewer.h  public_include.h
include/common/: general.h  matrix3x3.cpp  matrix3x3.h  matrix3x3.inl  mesh.cpp  mesh.h  transform.cpp  transform.h  transform.inl  vector3.cpp  vector3.h  vector3.inl
opengl/: version
opengl/lib/: freeglut.lib
src/: camera.cpp  camera.h  default_mesh.h  opengl_viewer.cpp  public_include.cpp  renderer.cpp  renderer.h  shader_frag.h  shader_program.cpp  shader_program.h  shader_vert.h
